[package]
name = "driving-test"
version = "0.1.0"
authors = ["Samuel Hicks <SamMHicks@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bevy = { version = "0.5.0", features = ["dynamic"] }
bevy_rapier2d = "0.9.0"
